# Thesis-VSMT

VSMT/: szakdolg -eredet nyil kieg..doc
VSMT/.archive/: CMakeLists.txt
VSMT/.archive/common/: metrics.cpp  metrics.h  sockmanager.cpp  sockmanager.h  util.cpp  util.h  vsockmanager.cpp  vsockmanager.h
VSMT/.archive/guest/: CMakeLists.txt
VSMT/.archive/guest/src/: applicaton.cpp  applicaton.h
VSMT/.archive/host/: CMakeLists.txt  clientdispatcher.cpp  clientdispatcher.h  clientstreamhandler.cpp  clientstreamhandler.h  controller.cpp  controller.h  gaugewidget.cpp  gaugewidget.h  graph.qml  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  responseparser.cpp  responseparser.h  speedometer.qml
VSMT/.archive/view/: CMakeLists.txt  qml.qrc  view.qmlproject  view.qmlproject.qtds
VSMT/.archive/view/src/: AppWindow.qml  PageRoot.qml  PageRootForm.ui.qml
VSMT/.archive/view/src/components/: ClientDescriptorForm.ui.qml  ClientSideBar.qml  ClientSideBarForm.ui.qml  ClientSideBarItem.qml  ClientSideBarItemForm.ui.qml  CpuChart.qml  LinearChartForm.ui.qml  MemoryChart.qml  ProcessTable.qml  ProcessTableForm.ui.qml
VSMT/.archive/view/src/ext/CircularGauge/: CircularGauge.qml  CircularGauge.qrc  CircularTickmarkLabel.qml  CpuGauge.qml  GaugeStyle.qml  MemoryGauge.qml  cpurangemodel.hpp  qquickrangemodel.cpp  qquickrangemodel_p.h
VSMT/.archive/view/src/model/: clientstatusmodel.cpp  clientstatusmodel.hpp  clientviewcontroller.cpp  clientviewcontroller.hpp  cpugraphdatamodel.hpp  dataprovider.hpp  flowbuffer.hpp  lineargraphdatamodel.cpp  lineargraphdatamodel.hpp  mainpageadapter.cpp  mainpageadapter.hpp  menubarmodel.hpp  pagenavigator.cpp  pagenavigator.hpp  processindexer.cpp  processindexer.hpp  processtablemodel.cpp  processtablemodel.hpp  qmlsingleton.hpp  view.cpp
VSMT/.archive/view/src/pages/: ClientCpuPage.qml  ClientCpuPageForm.ui.qml  ClientOverviewPage.qml  ClientOverviewPageForm.ui.qml  MainPage.qml  MainPageForm.ui.qml
VSMT/docs/: .$swa.drawio.bkp  .$swa.drawio_1.dtmp  notes.txt  swa.drawio  szakdoga.docx  szakdoga_kov.docx  szakdoga_plan.xlsx
VSMT/docs/umls/: application.uml  clientconnector.uml  clientdispatcher_pkg.uml  configlistmodel.uml  controller.uml  cpuloaddatamodel_pkg.uml  generate_uml.sh  metrics_pkg.uml  resourcemonitor_pkg.uml  vsocket_pkg.uml
VSMT/src/VSMT_App/: CMakeLists.txt  VSMT.qmlproject  VSMT.qmlproject.qtds  main.cpp  qml.qrc  qmldir  qtquickcontrols2.conf
VSMT/src/VSMT_App/controller/: clientconnector.cpp  clientconnector.hpp  clientdispatcher.hpp  clientviewcontroller.cpp  clientviewcontroller.hpp  controller.cpp  controller.hpp  localclientdispatcher.cpp  localclientdispatcher.hpp  remoteclientdispacher.cpp  vsockclient.cpp
VSMT/src/VSMT_App/core/: application.cpp  application.hpp  metatypes.hpp
VSMT/src/VSMT_App/datamodels/: clientconfiglistmodel.cpp  clientconfiglistmodel.hpp  clientconfigmodel.cpp  clientconfigmodel.hpp  clientdatacontainer.hpp  clientdescriptionmodel.cpp  clientdescriptionmodel.hpp  clientstatusmodel.cpp  clientstatusmodel.hpp  contiguousclientmapper.cpp  contiguousclientmapper.hpp  coreloaddatamodel.cpp  coreloaddatamodel.hpp  cpuloaddatamodel.cpp  cpuloaddatamodel.hpp  diskrangemodel.hpp  flowbuffer.hpp  lineargraphdatamodel.cpp  lineargraphdatamodel.hpp  memoryrangemodel.hpp  networkinterfacemodel.cpp  networkinterfacemodel.hpp  processindexer.cpp  processindexer.hpp  processtablemodel.cpp  processtablemodel.hpp  qquickrangemodel_p_p.h  rangemodel.hpp  storagedatamodel.cpp  storagedatamodel.hpp
VSMT/src/VSMT_App/util/: main.cpp  view.hpp
VSMT/src/VSMT_App/view/: AppWindow.qml  PageRoot.qml  PageRootForm.ui.qml  Style.qml
VSMT/src/VSMT_App/view/components/: Utils.js
VSMT/src/VSMT_App/view/components/charts/: CpuChart.qml  LinearChartForm.ui.qml  NetworkLoadChart.qml  SmallCpuChart.qml
VSMT/src/VSMT_App/view/components/gauges/: CircularGauge.qml  CircularTickmarkLabel.qml  CpuGauge.qml  DiskGauge.qml  GaugeStyle.qml  MemoryGauge.qml
VSMT/src/VSMT_App/view/components/general/: ClientConfigField.qml  ClientConfigList.qml  ClientConfigListForm.ui.qml  ClientDescriptor.qml  ClientDescriptorForm.ui.qml  ClientSideBar.qml  ClientSideBarItem.qml  ClientSideBarItemForm.ui.qml  Desktop.qml
VSMT/src/VSMT_App/view/components/tables/: ProcessTable.qml  ProcessTableForm.ui.qml
VSMT/src/VSMT_App/view/pages/: ClientConfigPage.qml  ClientConfigPageForm.ui.qml  ClientCpuPage.qml  ClientDiskPage.qml  ClientDiskPageForm.ui.qml  ClientNetworkPage.qml  ClientNetworkPageForm.ui.qml  ClientOverviewPage.qml  ClientOverviewPageForm.ui.qml  ClientProcessPage.qml  ClientProcessPageForm.ui.qml  MainPage.qml  MainPageForm.ui.qml
VSMT/src/VSMT_App/viewcontrollers/: pagenavigator.cpp  pagenavigator.hpp
VSMT/src/VSMT_Client/: CMakeLists.txt  sync.sh  vsmt-client-linux.bb
VSMT/src/VSMT_Client/src/: application.cpp  application.h  main.cpp  vsocksingletonserver.cpp  vsocksingletonserver.hpp
VSMT/src/VSMT_Hyp_Gateway/: CMakeLists.txt  sync.sh  vsmt-hyp-gateway.bb
VSMT/src/VSMT_Hyp_Gateway/src/: clientconnector.cpp  clientconnector.hpp  clientdispatcher.hpp  controller.cpp  controller.hpp  localclientdispatcher.cpp  main.cpp  remoteclientdispacher.cpp  remoteclientdispacher.hpp  vmgateway.cpp  vmgateway.hpp  vsockclient.hpp
VSMT/src/common/: clientconfiguration.hpp  metrics.cpp  metrics.hpp  metricserializer.cpp  metricserializer.hpp  platform.hpp  resourcemonitor.hpp  resourcemonitor_interface.hpp  resourcemonitor_qnx.cpp  util.cpp  util.hpp  vsock_headers.hpp  vsocket.cpp  vsocket.hpp  vsockmessage.cpp  vsockmessage.hpp
VSMT/src/common/linux/: commandutil.cpp  commandutil.hpp  resourcemonitor_linux.cpp  resourcemonitor_linux.hpp  sysfileparser.cpp  sysfileparser.hpp
VSMT/src/common/qnx/: resourcemonitor_qnx.cpp  resourcemonitor_qnx.hpp
